[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "spin"
version = "0.0.1"
description = "SPatial INtegration of spatially resolved transcriptomics data"
authors = [
    {name = "Kamal Maher", email = "kmaher@mit.edu"},
]
readme = {file = "README.md", content-type="text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "scanpy[leiden,harmony]==1.8.0",
    "numba==0.41.0",
    "matplotlib<3.7",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[project.scripts]
spin = "spin.cli:spin_cli"
